--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,10 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400..900;1,400..900&display=swap');
 
+html,
 body {
-	background-color: rgb(229, 243, 243);
+	margin: 0;
+	padding: 0;
 }
 
 .main_container {
@@ -10,6 +12,10 @@ body {
 	justify-content: center;
 	align-items: center;
 	flex-direction: column;
+	/* width: 100vw; */
+	margin: 0;
+	padding: 0;
+	overflow: hidden;
 }
 
 * {
