--- a/styles.css
+++ b/styles.css
@@ -20,11 +20,11 @@ body {
 
 * {
 	z-index: 1;
+	font-family: "Open Sans", sans-serif;
 }
 
 .main_time {
 	font-size: 10em;
-	font-family: "Open Sans", sans-serif;
 	margin: 0;
 
 	background-image: linear-gradient(0.15turn, red, orange, yellow, lime, blue, indigo, violet, red, orange, yellow, lime, blue, indigo, violet);
@@ -44,12 +44,23 @@ body {
 }
 
 .subtitle-p {
-	font-family: "Open Sans", sans-serif;
 	font-size: 2em;
 	margin: 0;
 	-webkit-text-fill-color: transparent;
 	-webkit-text-stroke: 2px black;
 	pointer-events: none;
+}
+
+.asterisk {
+	-webkit-text-stroke: 1px gray;
+	-webkit-text-fill-color: black;
+}
+
+.asterisk-note {
+	position: fixed;
+	bottom: 0.5em;
+	left: 0.5em;
+	font-size: 1em;
 }
 
 .lars1 {
