--- a/styles.css
+++ b/styles.css
@@ -104,7 +104,7 @@ body {
 	display: flex;
 	flex-direction: column;
 	/* justify-content: baseline; */
-	/* align-items: center; */
+	align-items: baseline;
 	width: 100%;
 	height: 100%;
 	z-index: 100;
@@ -118,7 +118,7 @@ body {
 }
 
 label {
-	margin-top: 1em;
+	margin-top: 2em;
 }
 
 #ya {
